[package]
name = "bethlehem"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38.0+1.3.281", optional = true }
bytemuck = "1.24.0"
dispatch2 = { version = "0.3.0", optional = true }
hassle-rs = "0.12.0"
libc = "1.0.0-alpha.1"
metal_irconverter = { git = "https://github.com/ProjectKML/metal_irconverter_rs", optional = true }
objc2 = { version = "0.6.3", optional = true }
objc2-core-foundation = { version = "0.3.2", optional = true }
objc2-foundation = { version = "0.3.2", optional = true }
objc2-quartz-core = { version = "0.3.2", optional = true }
objc2-metal = { version = "0.3.2", features = [
    "MTLAccelerationStructureTypes",
    "MTLLibrary",
    "MTLRenderPipeline",
    "MTLRenderCommandEncoder",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLPixelFormat",
    "MTLDevice",
    "MTLDrawable",
    "MTLRenderPass"], optional = true }
thiserror = "2.0.17"
sdl3 = "0.16.2"
anyhow = "1.0.100"

[features]
metal = ["dispatch2", "objc2", "objc2-core-foundation", "objc2-foundation", "objc2-quartz-core", "objc2-metal", "metal_irconverter"]
sdl = []
vulkan = ["ash"]
default = ["sdl", "metal", "vulkan"]
